--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinesh Portfolio</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -35,25 +38,40 @@
      <section class="hero-section">
  <div>
        <div>
-       <h4>Hi there,</h4>
-       <h2 class="hero-section-title">I'm Dinesh</h2>
+       <h4 title="Hello, How are you?">Hi there,</h4>
+       <h2 class="hero-section-title">I'm <span class="logo-name"> Dinesh</span></h2>
        <p class="hero-section-desc">
         Intrested in working on Frontend, Backend, API's, Databases and currently learning new things.
         I like making fun, interactive things with codeing.
         </p>
         </div>
-         <div>
+
+         <ul class="social-icon">
             <!-- Social icons -->
-         </div>
+            <li>
+                <a href="https://www.facebook.com/dineshdotnet/" target="_blank"><i class="fa-brands fa-facebook"></i></a> 
+            </li>
+            <li>
+                <a  href="https://www.linkedin.com/in/dinesh-s-0a90b3114/" target="_blank"><i class="fa-brands fa-linkedin"></i></a> 
+            </li>
+            <li>
+                <a  href="https://www.instagram.com/dineshindoteng/" target="_blank"><i class="fa-brands fa-instagram"></i></a> 
+            </li>
+            <li>
+                <a  href="https://twitter.com/DINESHS1997D" target="_blank"><i class="fa-brands fa-twitter"></i></a> 
+            </li>
+         </ul>
+
 
          <div>
-            <button> Hire Me</button>
-            <button> Download CV</button>
+            <button class="btn btn-primary"> Hire Me</button>
+            <button class="btn"> Download CV</button>
          </div>
 </div>     
    
      <div>
-       <img src="https://www.bafsthai.com/storage/leadership/nathasit.png" alt="Dinesh-Portfolio" width="400">
+       <img src=" https://www.bafsthai.com/storage/leadership/nathasit.png" width="400">
+     <!-- ./assets/photos/dinesh.png" alt="Dinesh-Portfolio -->
      </div>
 
     </main>
