--- a/index.html
+++ b/index.html
@@ -73,9 +73,41 @@
        <img src=" https://www.bafsthai.com/storage/leadership/nathasit.png" width="400">
      <!-- ./assets/photos/dinesh.png" alt="Dinesh-Portfolio -->
      </div>
+    </section>
 
+    <!-- About Me -->
+    <section class="about-section">
+        <img src="./assets/photos/dinesh-about-me.jpg" alt="Dinesh About Me">
+
+    <div class="about-desc">
+        <h4>I am Product <span>Designer</span> <br>& Web Developer</h4>
+
+        <ul>
+            <li>
+                <strong>Experience:</strong> 1 Year
+            </li>
+            <li>
+                <strong>Speciality:</strong> Web Developement
+            </li>
+            <li>
+                <strong>Address:</strong> India
+            </li>
+            <li>
+                <strong>Email:</strong> 
+                <a href="mailto:dineshinmecheng@gmail.com">dineshinmecheng@gmail.com</a>
+            </li>
+            <li>
+                <strong>Phone:</strong>
+                <a href="tel:+917305504500">       +917305504500</a> 
+            </li>
+        </ul>
+
+        <button class="btn  btn-primary">Know more</button>
+    </div>   
+
+    </section>
     </main>
 
-</section>
+
 </body>
 </html>
