design in work-section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,44 @@
     </div>   
 
     </section>
-    </main>
+
+  <!--   Work-Section -->
+ <section class="work-section">
+     <h4 class="work-title">My <span>Works</span></h4>
+   <div class="work-items">
+    <div class="work-box">
+        <span class="work-icon">
+            <i class="fa-solid fa-laptop-code fa-beat" style="color:#3299cd;"></i> 
+        </span>
+        <!-- icons-here -->
+        <h4>Web Design</h4>
+        <p>I create beautiful & functional websites for small businesses.</p>
+        <a href="#">See my work here..</a>
+    </div>
+
+    <div class="work-box">
+        <span class="work-icon">
+            <i class="fa-brands fa-react fa-spin" style="color:#3299cd;"></i>  
+        </span>
+        <!-- icons-here -->
+        <h4>React Developer</h4>
+        <p>I am a frontend web developer. I can provide clean code and pixel perfect design.I also make website more interactive with web animations.</p>
+        <a href="#">See my work here..</a>
+    </div>
+
+    <div class="work-box">
+        <span class="work-icon">
+            <i class="fa-thin fa-globe fa-fade" style="color:#3299cd;"></i>
+        </span>
+        <!-- icons-here -->
+        <h4>Web Programmer</h4>
+        <p>I build custom website solutions that help your business grow.</p>
+        <a href="#">See my work here..</a>
+    </div>
+
+   </div>    
+</section>
+</main>
 
 
 </body>
