--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      <section class="hero-section">
  <div>
        <div>
-       <h4 title="Hello, How are you?">Hi there,</h4>
+       <h4 title="Hello, How are you?">Hi there,<span className="hand-wave">👋</span></h4>
        <h2 class="hero-section-title">I'm <span class="logo-name"> Dinesh</span></h2>
        <p class="hero-section-desc">
         Intrested in working on Frontend, Backend, API's, Databases and currently learning new things.
@@ -69,22 +69,22 @@
          </div>
 </div>     
    
-     <div>
-       <img src=" https://www.bafsthai.com/storage/leadership/nathasit.png" width="400">
+     <div class="hero-img">
+       <img src="./assets/photos/dineshbg.jpg" width="400">
      <!-- ./assets/photos/dinesh.png" alt="Dinesh-Portfolio -->
      </div>
     </section>
 
     <!-- About Me -->
     <section class="about-section">
-        <img src="./assets/photos/dinesh-about-me.jpg" alt="Dinesh About Me">
+        <img src="./assets/photos/dinesh.png" alt="Dinesh About Me">
 
     <div class="about-desc">
-        <h4>I am Product <span>Designer</span> <br>& Web Developer</h4>
+        <h4>I am Web <span>Developer</span> <br>& Service Engineer </h4>
 
         <ul>
             <li>
-                <strong>Experience:</strong> 1 Year
+                <strong>Experience:</strong> Fresher
             </li>
             <li>
                 <strong>Speciality:</strong> Web Developement
@@ -109,7 +109,7 @@
 
   <!--   Work-Section -->
  <section class="work-section">
-     <h4 class="work-title">My <span>Works</span></h4>
+     <h4 class="work-title">What I'm <span>Doing</span></h4>
    <div class="work-items">
     <div class="work-box">
         <span class="work-icon">
@@ -118,7 +118,7 @@
         <!-- icons-here -->
         <h4>Web Design</h4>
         <p>I create beautiful & functional websites for small businesses.</p>
-        <a href="#">See my work here..</a>
+        <a href="#">Read More..</a>
     </div>
 
     <div class="work-box">
@@ -128,7 +128,7 @@
         <!-- icons-here -->
         <h4>React Developer</h4>
         <p>I am a frontend web developer. I can provide clean code and pixel perfect design.I also make website more interactive with web animations.</p>
-        <a href="#">See my work here..</a>
+        <a href="#">Read More..</a>
     </div>
 
     <div class="work-box">
@@ -138,12 +138,16 @@
         <!-- icons-here -->
         <h4>Web Programmer</h4>
         <p>I build custom website solutions that help your business grow.</p>
-        <a href="#">See my work here..</a>
+        <a href="#">Read More..</a>
     </div>
 
    </div>    
 </section>
 </main>
+<footer>
+    <p>Copyright &copy; 2023 - <a href="https://dineshdevelope.github.io/Dinesh-Portfolio/" target="_blank">Dinesh S</a> - AllRights
+        Reserved.</p>
+</footer>
 
 
 </body>
