--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      <section class="hero-section">
  <div>
        <div>
-       <h4 title="Hello, How are you?">Hi there,<span className="hand-wave">👋</span></h4>
+       <h4 title="Hello, How are you?">Hi there,<span class="waving-hand">👋</span></h4>
        <h2 class="hero-section-title">I'm <span class="logo-name"> Dinesh</span></h2>
        <p class="hero-section-desc">
         Intrested in working on Frontend, Backend, API's, Databases and currently learning new things.
@@ -49,16 +49,16 @@
          <ul class="social-icon">
             <!-- Social icons -->
             <li>
-                <a href="https://www.facebook.com/dineshdotnet/" target="_blank"><i class="fa-brands fa-facebook"></i></a> 
+                <a href="https://www.facebook.com/dineshdotnet/" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a> 
             </li>
             <li>
-                <a  href="https://www.linkedin.com/in/dinesh-s-0a90b3114/" target="_blank"><i class="fa-brands fa-linkedin"></i></a> 
+                <a  href="https://www.linkedin.com/in/dinesh-s-0a90b3114/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a> 
             </li>
             <li>
-                <a  href="https://www.instagram.com/dineshindoteng/" target="_blank"><i class="fa-brands fa-instagram"></i></a> 
+                <a  href="https://www.instagram.com/dineshindoteng/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a> 
             </li>
             <li>
-                <a  href="https://twitter.com/DINESHS1997D" target="_blank"><i class="fa-brands fa-twitter"></i></a> 
+                <a  href="https://twitter.com/DINESHS1997D" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a> 
             </li>
          </ul>
 
@@ -113,7 +113,7 @@
    <div class="work-items">
     <div class="work-box">
         <span class="work-icon">
-            <i class="fa-solid fa-laptop-code fa-beat" style="color:#3299cd;"></i> 
+        <i class="fa-solid fa-layer-group fa-xl"></i>
         </span>
         <!-- icons-here -->
         <h4>Web Design</h4>
@@ -123,7 +123,7 @@
 
     <div class="work-box">
         <span class="work-icon">
-            <i class="fa-brands fa-react fa-spin" style="color:#3299cd;"></i>  
+        <i class="fa-brands fa-react fa-spin fa-xl"></i> 
         </span>
         <!-- icons-here -->
         <h4>React Developer</h4>
@@ -133,7 +133,7 @@
 
     <div class="work-box">
         <span class="work-icon">
-            <i class="fa-thin fa-globe fa-fade" style="color:#3299cd;"></i>
+        <i class="fa-solid fa-code fa-xl"></i>
         </span>
         <!-- icons-here -->
         <h4>Web Programmer</h4>
