--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      <section class="hero-section">
  <div>
        <div>
-       <h4 title="Hello, How are you?">Hi there,<span class="waving-hand">👋</span></h4>
+       <h4 title="Hello Buddy">Hi there,<span class="waving-hand">👋</span></h4>
        <h2 class="hero-section-title">I'm <span class="logo-name"> Dinesh</span></h2>
        <p class="hero-section-desc">
         Intrested in working on Frontend, Backend, API's, Databases and currently learning new things.
@@ -61,6 +61,7 @@
                 <a  href="https://twitter.com/DINESHS1997D" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a> 
             </li>
          </ul>
+
 
 
          <div>
@@ -142,6 +143,27 @@
     </div>
 
    </div>    
+</section>
+
+<!-- Contact Me -->
+<section class="contact">
+    <h4>Contact <span>Here</span></h4>
+
+    <form>
+     <div>   
+     <input type="text" name="name" placeholder="Enter your Full Name">
+    </div>
+    <div>   
+        <input type="text" name="subject" placeholder="Share your excitement with us">
+    </div>
+    <div>   
+      <textarea name="description" placeholder="Enter briefly...." rows="6 "></textarea>
+     </div>
+     <div>
+     <button class="contact-button">Send a Message</button>   
+     </div>
+    </form>
+
 </section>
 </main>
 <footer>
