--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <a href="./index.html">Home</a>
                 </li>
                 <li>
-                <a href="./about.html">About</a>   
+                <a href="#about-section">About</a>   
                 </li>
                 <li>
-                <a href="#">Contact</a>
+                <a href="#contact">Contact</a>
                 </li>
             </ul> 
     </div>
@@ -77,7 +77,7 @@
     </section>
 
     <!-- About Me -->
-    <section class="about-section">
+    <section class="about-section" id="about-section">
         <img src="./assets/photos/dinesh.png" alt="Dinesh About Me">
 
     <div class="about-desc">
@@ -146,7 +146,7 @@
 </section>
 
 <!-- Contact Me -->
-<section class="contact">
+<section class="contact" id="contact">
     <h4>Contact <span>Here</span></h4>
 
     <form>
@@ -157,7 +157,7 @@
         <input type="text" name="subject" placeholder="Share your excitement with us">
     </div>
     <div>   
-      <textarea name="description" placeholder="Enter briefly...." rows="6 "></textarea>
+      <textarea name="description" placeholder="Enter your comments...." rows="6 "></textarea>
      </div>
      <div>
      <button class="contact-button">Send a Message</button>   
