--- a/index.html
+++ b/index.html
@@ -1,176 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dinesh Portfolio</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
     <header>
       <div>
-       <a href="./about.html"> <span class="logo">Dinesh</span></a>
-      </div> 
+        <a href="#"> <span class="logo">Dinesh</span></a>
+      </div>
 
       <div>
-            <ul>
-                <li>
-                <a href="./index.html">Home</a>
-                </li>
-                <li>
-                <a href="#about-section">About</a>   
-                </li>
-                <li>
-                <a href="#contact">Contact</a>
-                </li>
-            </ul> 
-    </div>
+        <ul>
+          <li>
+            <a href="./index.html">Home</a>
+          </li>
+          <li>
+            <a href="#about-section">About</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
 
-    <div>
+      <div>
         <button>DOWNLOAD CV</button>
-    </div>
+      </div>
     </header>
 
     <main>
-     <section class="hero-section">
- <div>
-       <div>
-       <h4 title="Hello Buddy">Hi there,<span class="waving-hand">👋</span></h4>
-       <h2 class="hero-section-title">I'm <span class="logo-name"> Dinesh</span></h2>
-       <p class="hero-section-desc">
-        Intrested in working on Frontend, Backend, API's, Databases and currently learning new things.
-        I like making fun, interactive things with codeing.
-        </p>
-        </div>
+      <section class="hero-section">
+        <div>
+          <div>
+            <h4 title="Hello Buddy">
+              Hi there,<span class="waving-hand">👋</span>
+            </h4>
+            <h2 class="hero-section-title">
+              I'm <span class="logo-name"> Dinesh</span>
+            </h2>
+            <p class="hero-section-desc">
+              Intrested in working on Frontend, Backend, API's, Databases and
+              currently learning new things. I like making fun, interactive
+              things with codeing.
+            </p>
+          </div>
 
-         <ul class="social-icon">
+          <ul class="social-icon">
             <!-- Social icons -->
             <li>
-                <a href="https://www.facebook.com/dineshdotnet/" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a> 
+              <a href="https://www.facebook.com/dineshdotnet/" target="_blank"
+                ><i class="fa-brands fa-facebook fa-2xl"></i
+              ></a>
             </li>
             <li>
-                <a  href="https://www.linkedin.com/in/dinesh-s-0a90b3114/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a> 
+              <a
+                href="https://www.linkedin.com/in/dinesh-s-0a90b3114/"
+                target="_blank"
+                ><i class="fa-brands fa-linkedin fa-2xl"></i
+              ></a>
             </li>
             <li>
-                <a  href="https://www.instagram.com/dineshindoteng/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a> 
+              <a
+                href="https://www.instagram.com/dineshindoteng/"
+                target="_blank"
+                ><i class="fa-brands fa-instagram fa-2xl"></i
+              ></a>
             </li>
             <li>
-                <a  href="https://twitter.com/DINESHS1997D" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a> 
+              <a href="https://twitter.com/DINESHS1997D" target="_blank"
+                ><i class="fa-brands fa-twitter fa-2xl"></i
+              ></a>
             </li>
-         </ul>
+          </ul>
 
+          <div>
+            <button class="btn btn-primary">Hire Me</button>
+            <button class="btn">Download CV</button>
+          </div>
+        </div>
 
+        <div class="hero-img">
+          <img src="./assets/photos/dineshbg.jpg" width="400" />
+          <!-- ./assets/photos/dinesh.png" alt="Dinesh-Portfolio -->
+        </div>
+      </section>
 
-         <div>
-            <button class="btn btn-primary"> Hire Me</button>
-            <button class="btn"> Download CV</button>
-         </div>
-</div>     
-   
-     <div class="hero-img">
-       <img src="./assets/photos/dineshbg.jpg" width="400">
-     <!-- ./assets/photos/dinesh.png" alt="Dinesh-Portfolio -->
-     </div>
-    </section>
+      <!-- About Me -->
+      <section class="about-section" id="about-section">
+        <img src="./assets/photos/dinesh.png" alt="Dinesh About Me" />
 
-    <!-- About Me -->
-    <section class="about-section" id="about-section">
-        <img src="./assets/photos/dinesh.png" alt="Dinesh About Me">
+        <div class="about-desc">
+          <h4>I am Web <span>Developer</span> <br />& Service Engineer</h4>
 
-    <div class="about-desc">
-        <h4>I am Web <span>Developer</span> <br>& Service Engineer </h4>
-
-        <ul>
+          <ul>
+            <li><strong>Experience:</strong> Fresher</li>
+            <li><strong>Speciality:</strong> Web Developement</li>
+            <li><strong>Address:</strong> India</li>
             <li>
-                <strong>Experience:</strong> Fresher
-            </li>
-            <li>
-                <strong>Speciality:</strong> Web Developement
-            </li>
-            <li>
-                <strong>Address:</strong> India
-            </li>
-            <li>
-                <strong>Email:</strong> 
-                <a href="mailto:dineshinmecheng@gmail.com">dineshinmecheng@gmail.com</a>
+              <strong>Email:</strong>
+              <a href="mailto:dineshinmecheng@gmail.com"
+                >dineshinmecheng@gmail.com</a
+              >
             </li>
             <li>
-                <strong>Phone:</strong>
-                <a href="tel:+917305504500">       +917305504500</a> 
+              <strong>Phone:</strong>
+              <a href="tel:+917305504500"> +917305504500</a>
             </li>
-        </ul>
+          </ul>
 
-        <button class="btn  btn-primary">Know more</button>
-    </div>   
+          <button class="btn btn-primary">Know more</button>
+        </div>
+      </section>
 
-    </section>
+      <!--   Work-Section -->
+      <section class="work-section">
+        <h4 class="work-title">What I'm <span>Doing</span></h4>
+        <div class="work-items">
+          <div class="work-box">
+            <span class="work-icon">
+              <i class="fa-solid fa-layer-group fa-xl"></i>
+            </span>
+            <!-- icons-here -->
+            <h4>Web Design</h4>
+            <p>
+              I create beautiful & functional websites for small businesses.
+            </p>
+            <a href="#">Read More..</a>
+          </div>
 
-  <!--   Work-Section -->
- <section class="work-section">
-     <h4 class="work-title">What I'm <span>Doing</span></h4>
-   <div class="work-items">
-    <div class="work-box">
-        <span class="work-icon">
-        <i class="fa-solid fa-layer-group fa-xl"></i>
-        </span>
-        <!-- icons-here -->
-        <h4>Web Design</h4>
-        <p>I create beautiful & functional websites for small businesses.</p>
-        <a href="#">Read More..</a>
-    </div>
+          <div class="work-box">
+            <span class="work-icon">
+              <i class="fa-brands fa-react fa-spin fa-xl"></i>
+            </span>
+            <!-- icons-here -->
+            <h4>React Developer</h4>
+            <p>
+              I am a frontend web developer. I can provide clean code and pixel
+              perfect design.I also make website more interactive with web
+              animations.
+            </p>
+            <a href="#">Read More..</a>
+          </div>
 
-    <div class="work-box">
-        <span class="work-icon">
-        <i class="fa-brands fa-react fa-spin fa-xl"></i> 
-        </span>
-        <!-- icons-here -->
-        <h4>React Developer</h4>
-        <p>I am a frontend web developer. I can provide clean code and pixel perfect design.I also make website more interactive with web animations.</p>
-        <a href="#">Read More..</a>
-    </div>
+          <div class="work-box">
+            <span class="work-icon">
+              <i class="fa-solid fa-code fa-xl"></i>
+            </span>
+            <!-- icons-here -->
+            <h4>Web Programmer</h4>
+            <p>
+              I build custom website solutions that help your business grow.
+            </p>
+            <a href="#">Read More..</a>
+          </div>
+        </div>
+      </section>
 
-    <div class="work-box">
-        <span class="work-icon">
-        <i class="fa-solid fa-code fa-xl"></i>
-        </span>
-        <!-- icons-here -->
-        <h4>Web Programmer</h4>
-        <p>I build custom website solutions that help your business grow.</p>
-        <a href="#">Read More..</a>
-    </div>
+      <!-- Contact Me -->
+      <section class="contact" id="contact">
+        <h4>Contact <span>Here</span></h4>
 
-   </div>    
-</section>
-
-<!-- Contact Me -->
-<section class="contact" id="contact">
-    <h4>Contact <span>Here</span></h4>
-
-    <form>
-     <div>   
-     <input type="text" name="name" placeholder="Enter your Full Name">
-    </div>
-    <div>   
-        <input type="text" name="subject" placeholder="Share your excitement with us">
-    </div>
-    <div>   
-      <textarea name="description" placeholder="Enter your comments...." rows="6 "></textarea>
-     </div>
-     <div>
-     <button class="contact-button">Send a Message</button>   
-     </div>
-    </form>
-
-</section>
-</main>
-<footer>
-    <p>Copyright &copy; 2023 - <a href="https://dineshdevelope.github.io/Dinesh-Portfolio/" target="_blank">Dinesh S</a> - AllRights
-        Reserved.</p>
-</footer>
-
-
-</body>
+        <form>
+          <div>
+            <input type="text" name="name" placeholder="Enter your Full Name" />
+          </div>
+          <div>
+            <input
+              type="text"
+              name="subject"
+              placeholder="Share your excitement with us"
+            />
+          </div>
+          <div>
+            <textarea
+              name="description"
+              placeholder="Enter your comments...."
+              rows="6 "
+            ></textarea>
+          </div>
+          <div>
+            <button class="contact-button">Send a Message</button>
+          </div>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p>
+        Copyright &copy; 2023 -
+        <a
+          href="https://dineshdevelope.github.io/Dinesh-Portfolio/"
+          target="_blank"
+          >Dinesh S</a
+        >
+        - AllRights Reserved.
+      </p>
+    </footer>
+  </body>
 </html>
