--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="hero-img">
-          <img src="./assets/photos/dineshbg.jpg" width="400" />
+          <img src="./assets/photos/dinesh-portpolio.webp" width="400" />
           <!-- ./assets/photos/dinesh.png" alt="Dinesh-Portfolio -->
         </div>
       </section>
